substrate/frame/support/test/tests/runtime_ui/conflicting_pallet_name.stderr
error: Two pallets with the same name!
  --> tests/runtime_ui/conflicting_pallet_name.rs:39:9
   |
39 |         System: frame_system,
   |         ^^^^^^

error: Two pallets with the same name!
  --> tests/runtime_ui/conflicting_pallet_name.rs:41:9
   |
41 |         System: pallet,
   |         ^^^^^^
